<<<<<<< HEAD
<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
		http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.scijava</groupId>
		<artifactId>pom-scijava</artifactId>
		<version>14.0.0</version>
		<relativePath />
	</parent>

	<groupId>com.spectrumimager.CSI</groupId>
	<artifactId>Cornell_Spectrum_Imager</artifactId>
	<version>2.0.0</version>


	<name>Cornell Spectrum Imager</name>
	<description>Spectrum and Diffraction image analyzer.</description>
	<url>http://spectrumimager.com/</url>
	<inceptionYear>2011</inceptionYear>
	<organization>
		<name>Cornell University</name>
		<url>http://cornell.edu/</url>
	</organization>
	<licenses>
		<license>
			<name>Simplified BSD License</name>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>ctrueden</id>
			<name>Paul Cueva</name>
			<url>http://paulcueva.com</url>
			<roles>
				<role>lead</role>
				<role>developer</role>
				<role>debugger</role>
				<role>reviewer</role>
				<role>support</role>
				<role>maintainer</role>
			</roles>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Robert Hovden</name>
		</contributor>
	</contributors>

	<mailingLists>
		<mailingList>
			<name>Spectrum Imager</name>
			<archive>http://spectrumimager.com/</archive>
		</mailingList>
	</mailingLists>

	<scm>
		<connection>scm:git:git://github.com/pdcueva/cornell-spectrum-imager</connection>
		<developerConnection>scm:git:git@github.com:pdcueva/cornell-spectrum-imager</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/pdcueva/cornell-spectrum-imager</url>
	</scm>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/pdcueva/cornell-spectrum-imager</url>
	</issueManagement>
	<ciManagement>
		<system>None</system>
	</ciManagement>

	<properties>
		<package-name>com.spectrumimager.CSI</package-name>
		<license.licenseName>bsd_2</license.licenseName>
		<license.copyrightOwners>Cornell University</license.copyrightOwners>
	</properties>

=======
<project xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
		http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.csi</groupId>
	<artifactId>csi</artifactId>
	<version>1.7.0</version>

	<name>Cornell Spectrum Imager</name>
	<description>Spectrum Analysis Plugins for ImageJ</description>
	
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<targetPath>.</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/src/</directory>
				<includes>
					<include>IJ_Props.txt</include>
					<include>macros/*.txt</include>
					<include>macros/*.ijm</include>
					<include>macros/toolsets/CSI.txt</include>
					<include>macros/toolsets/CSI4D.txt</include>
					<include>images/CSI_prism.gif</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>ij.ImageJ</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<id>l4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>console</headerType>
							<outfile>target/csi-1.7.0.exe</outfile>
							<jar>target/csi-1.7.0.jar</jar>

							<errTitle>csi</errTitle>
							<classPath>
								<mainClass>ij.ImageJ</mainClass>
								<addDependencies>true</addDependencies>
								<preCp>anything</preCp>
							</classPath>
							<jre>
								<minVersion>1.7.0</minVersion>
								<opts>
									<opt>-Djava.endorsed.dirs=./endorsed</opt>
								</opts>
							</jre>
							<versionInfo>
								<fileVersion>1.2.3.4</fileVersion>
								<txtFileVersion>txt file version?</txtFileVersion>
								<fileDescription>a description</fileDescription>
								<copyright>my copyright</copyright>
								<productVersion>4.3.2.1</productVersion>
								<txtProductVersion>txt product version</txtProductVersion>
								<productName>CSI</productName>
								<internalName>ccne</internalName>
								<originalFilename>original.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>sh.tak.appbundler</groupId>
				<artifactId>appbundle-maven-plugin</artifactId>
				<version>1.0.4</version>
				<configuration>
					<mainClass>ij.ImageJ</mainClass>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>bundle</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
>>>>>>> 17b2fd426a6d49ac4f595b1afad9b914910322fd
	<dependencies>
		<dependency>
			<groupId>net.imagej</groupId>
			<artifactId>ij</artifactId>
		</dependency>
		<dependency>
			<groupId>org.ujmp</groupId>
			<artifactId>ujmp-core</artifactId>
			<version>0.3.0</version>
		</dependency>
	</dependencies>
</project>
